<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fade_white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/buyersigninimage"
        android:layout_width="234dp"
        android:layout_height="149dp"

        android:layout_marginTop="100dp"
        android:foregroundGravity="center"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bsemailid"
        android:layout_width="312dp"
        android:layout_height="55dp"

        android:layout_marginTop="56dp"
        android:backgroundTint="@color/zariPurple"
        android:gravity="center"
        android:padding="16dp"
        android:hint="Email"
        android:textColor="@color/zariPurple"
        android:textColorHint="@color/zariPurple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyersigninimage" />

    <EditText
        android:id="@+id/bspassword"
        android:layout_width="312dp"
        android:layout_height="55dp"

        android:layout_marginTop="24dp"
        android:backgroundTint="@color/zariPurple"
        android:gravity="center"
        android:padding="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/zariPurple"
        android:textColorHint="@color/zariPurple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsemailid" />

    <Button
        android:id="@+id/bssignin"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundbtnpurple"
        android:text="Sign In"
        android:textColor="@color/fade_white"
        android:textColorLink="@color/fade_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bspassword" />

    <TextView
        android:id="@+id/redirectsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Click Here to Sign Up"
        android:textColor="@color/zariPurple"
        android:textColorLink="@color/zariPurple"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bssignin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/incorrectmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>